// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to aircraft page if not manager or techlog manager 1`] = `
<div>
  Aircraft Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to organization page if aircraft was not found 1`] = `
<div>
  Organization Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to start page if organization was not found 1`] = `
<div>
  Start Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders aircraft settings when everything is loaded 1`] = `
<div
  className="injectIntl(AircraftSettings)-container-1"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
  >
    HBKFW
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiButton-root injectIntl(AircraftSettings)-closeSettingsButton-4 MuiButton-text MuiButton-textPrimary"
      href="/organizations/my_org/aircrafts/o7flC7jw8jmkOfWo8oyA"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <span
        className="MuiButton-label"
      >
        Einstellungen schliessen
      </span>
    </a>
  </h4>
  <div>
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Checks
    </h5>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Check hinzufügen
      </span>
    </button>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
    >
      Keine Checks erfasst
    </p>
  </div>
  <div>
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Treibstofftypen
    </h5>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Treibstofftyp hinzufügen
      </span>
    </button>
    <ul
      className="MuiList-root MuiList-dense MuiList-padding"
    >
      <li
        className="MuiListItem-container"
      >
        <div
          className="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
          disabled={false}
        >
          <div
            className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
            >
              AvGas
            </span>
            <p
              className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
            >
              avgas
            </p>
          </div>
        </div>
        <div
          className="MuiListItemSecondaryAction-root"
        >
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
        </div>
      </li>
      <li
        className="MuiListItem-container"
      >
        <div
          className="MuiListItem-root MuiListItem-dense MuiListItem-secondaryAction"
          disabled={false}
        >
          <div
            className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
          >
            <span
              className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
            >
              MoGas
            </span>
            <p
              className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
            >
              mogas
            </p>
          </div>
        </div>
        <div
          className="MuiListItemSecondaryAction-root"
        >
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
          </button>
        </div>
      </li>
    </ul>
  </div>
  <h5
    className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
  >
    Erweiterte Einstellungen
  </h5>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-container"
    >
      <div
        className="MuiListItem-root MuiListItem-secondaryAction"
        disabled={false}
      >
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            Flugstunden-Zähler aktiviert
          </span>
        </div>
      </div>
      <div
        className="MuiListItemSecondaryAction-root"
      >
        <span
          className="MuiSwitch-root MuiSwitch-edgeEnd"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-123 MuiSwitch-switchBase MuiSwitch-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-thumb"
              />
              <input
                checked={false}
                className="PrivateSwitchBase-input-126 MuiSwitch-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track"
          />
        </span>
      </div>
    </li>
    <li
      className="MuiListItem-container"
    >
      <div
        className="MuiListItem-root MuiListItem-secondaryAction"
        disabled={false}
      >
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            Motorstunden-Zähler aktiviert
          </span>
        </div>
      </div>
      <div
        className="MuiListItemSecondaryAction-root"
      >
        <span
          className="MuiSwitch-root MuiSwitch-edgeEnd"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-123 MuiSwitch-switchBase MuiSwitch-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-thumb"
              />
              <input
                checked={false}
                className="PrivateSwitchBase-input-126 MuiSwitch-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track"
          />
        </span>
      </div>
    </li>
    <li
      className="MuiListItem-container"
    >
      <div
        className="MuiListItem-root MuiListItem-secondaryAction"
        disabled={false}
      >
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            Techlog aktiviert
          </span>
        </div>
      </div>
      <div
        className="MuiListItemSecondaryAction-root"
      >
        <span
          className="MuiSwitch-root MuiSwitch-edgeEnd"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-123 MuiSwitch-switchBase MuiSwitch-colorSecondary"
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-thumb"
              />
              <input
                checked={false}
                className="PrivateSwitchBase-input-126 MuiSwitch-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track"
          />
        </span>
      </div>
    </li>
  </ul>
  <hr
    className="MuiDivider-root injectIntl(AircraftSettings)-divider-2"
  />
  <div
    className="injectIntl(AircraftSettings)-deleteButtonContainer-3"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-cy="aircraft-delete-button"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        Flugzeug löschen
      </span>
    </button>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if aircraft not loaded 1`] = `
<div
  className="LoadingIcon-container-5"
>
  <div
    className="MuiCircularProgress-root LoadingIcon-icon-6 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if organization not loaded 1`] = `
<div
  className="LoadingIcon-container-5"
>
  <div
    className="MuiCircularProgress-root LoadingIcon-icon-6 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders only certain fields for techlogmanager 1`] = `
<div
  className="injectIntl(AircraftSettings)-container-1"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
  >
    HBKFW
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiButton-root injectIntl(AircraftSettings)-closeSettingsButton-4 MuiButton-text MuiButton-textPrimary"
      href="/organizations/my_org/aircrafts/o7flC7jw8jmkOfWo8oyA"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <span
        className="MuiButton-label"
      >
        Einstellungen schliessen
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
  </h4>
  <div>
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Checks
    </h5>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Check hinzufügen
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
    >
      Keine Checks erfasst
    </p>
  </div>
</div>
`;
